# group

./: .gitignore  Anchor.toml  parse.py
programs/user-group/: Cargo.toml
programs/user-group/src/: account_infos.rs  errors.rs  events.rs  lib.rs  states.rs  utils.rs
programs/user-group/src/account_infos/: add_admin.rs  close_proposal.rs  close_signature.rs  create_group.rs  deposit_token.rs  exit_group.rs  freeze_group.rs  initialize.rs  join_group.rs  remove_admin.rs  reset_group.rs  reset_member.rs  revoke_proposal.rs  sign_proposal.rs  submit_proposal.rs  thaw_group.rs  update_proposal.rs  upgrade_group.rs
programs/user-group/src/states/: admin.rs  group.rs  member.rs  proposal.rs  signature.rs
tests/: user-group.ts
